# DDP

./: ddp_bucket.h  ddp_cuda_reducer.cpp  ddp_cuda_reducer.h  ddp_nccl.h  ddp_nccl_reducer.cu  gpt.h  nccl_init.h  train.cpp
ddp9/ddp_custom/: CMakeLists.txt  compare.py  ddp_sanity.py  gpt2.py  graph.py  pyproject.toml  smoke_pg.py  train.py
ddp9/ddp_custom/log_compare/: custom_rank0.csv  torch_rank0.csv
ddp9/ddp_custom/log_mlp/: log.txt  log_custom.txt
ddp9/ddp_custom/log_nano/: log.txt
ddp9/ddp_custom/python/: pyproject.toml
ddp9/ddp_custom/python/ddp/: __init__.py  ddp.py  process_group.py  utils.py
ddp9/ddp_custom/src/ddp_backend/: bindings.cpp  kernels.cu  kernels.h  macros.h  process_group_nccl.cpp  process_group_nccl.h  test
