[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "ddp-backend"
version = "0.2.0"
description = "NCCL-based ProcessGroup and DDP wrapper backend (pybind11)"
requires-python = ">=3.8"
authors = [{ name = "GV" }]

[tool.scikit-build]
cmake.version = ">=3.20"


