[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ddp-python"
version = "0.2.0"
description = "Python wrapper for custom NCCL DDP backend"
requires-python = ">=3.8"
authors = [{name = "GV"}]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["ddp"]

